Change message display format and use datalist to select rooms to join

--- a/public/chat.html
+++ b/public/chat.html
@@ -20,7 +20,7 @@
     
     <div class="chat__footer">
       <form id="message-form">
-        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
+        <input id="send-box" name="message" type="text" placeholder="Message" autofocus autocomplete="off" />
         <button>Send</button>
       </form>
 
@@ -30,28 +30,29 @@
 
   <script id="message-template" type="text/template">
     <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-      </div>
-      <div class="message__body">
+      <div class="message__timestamp">{{createdAt}}</div>
+      <div class="message__box {{class}}">
+        <h4>{{from}}:</h4>
+        <div class="message__body">
         <p>{{text}}</p>
-      </div>  
+      </div>          
+
+    </div>
+
     </li>
   </script>
 
   <script id="location-message-template" type="text/template">
     <li class="message">
-      <div class="message__title">
-        <h4>{{from}}</h4>
-        <span>{{createdAt}}</span>
-        <p>
+      <div class="message__timestamp">{{createdAt}}</div>
+      <div class="message__box {{class}}">
+        <h4>{{from}}: </h4>
+        <div class="message__body">
+          <p>
+            <a href="{{url}}" target="_blank">Current location</a>
+          </p>
+        </div>  
       </div>
-      <div class="message__body">
-        <p>
-          <a href="{{url}}" target="_blank">Current location</a>
-        </p>
-      </div>  
     </li>
   </script>
 
